--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tmyers273.vuex-table-store",
+    "name": "tmyers273.vuex-helpers",
     "description": "Vuex helper functions",
     "version": "1.0.0",
     "author": "tmyers273",
