--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Vuex helper functions",
     "version": "1.0.0",
     "author": "tmyers273",
-    "main": "dist/index.js",
+    "main": "src/index.js",
     "peerDependencies": {
         "vue": "^2.2.6"
     }
