--- a/package.json
+++ b/package.json
@@ -3,8 +3,34 @@
     "description": "Vuex helper functions",
     "version": "1.0.0",
     "author": "tmyers273",
-    "main": "src/index.js",
+    "main": "dist/index.js",
     "peerDependencies": {
         "vue": "^2.2.6"
+    },
+    "devDependencies": {
+        "babel-core": "^6.25.0",
+        "babel-loader": "latest",
+        "babel-preset-env": "^1.5.2",
+        "cross-env": "^3.0.0",
+        "css-loader": "^0.25.0",
+        "file-loader": "^0.9.0",
+        "node-sass": "^4.5.0",
+        "sass-loader": "^5.0.1",
+        "uglifyjs-webpack-plugin": "^0.4.6",
+        "vue": "^2.2.6",
+        "vue-hot-reload-api": "^2.0.8",
+        "vue-loader": "^10.0.0",
+        "vue-style-loader": "^2.0.0",
+        "vue-template-compiler": "^2.1.0",
+        "webpack": "^2.2.0",
+        "webpack-dev-server": "^2.2.0",
+        "webpack-merge": "^4.1.0"
+    },
+    "scripts": {
+        "build": "webpack --config ./build/webpack.config.js --progress --hide-modules"
+    },
+    "babel": {
+        "presets": ["env"],
+        "comments": false
     }
 }
